--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI = "mongodb+srv://maheshwarihrishant:Hrishant22@cluster0.babd5qd.mongodb.net"
-CLERK_WEBHOOK_SECRET = ""
+CLERK_WEBHOOK_SECRET = "whsec_HzvkMOSvklSMC5JV8syo9O1AEpzND8nY"
