--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,20 +1,30 @@
-  {
-    "version": 2,
-    "builds": [
-        {
-            "src": "server.js",
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "dist/**"
-                ]
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "server.js"
-        }
-    ]
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "config/**",
+          "controllers/**",
+          "models/**"
+        ]
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/webhooks",
+      "dest": "server.js",
+      "methods": ["POST"],
+      "headers": {
+        "content-type": "application/json"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
+    }
+  ]
 }
