--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,14 @@
+JWT_SECRET = "dev#secret"
+
+# Mongodb
 MONGODB_URI = "mongodb+srv://maheshwarihrishant:Hrishant22@cluster0.babd5qd.mongodb.net"
+
+# cloudinary setup
+CLOUDINARY_NAME = "dwmkvqp5a"
+CLOUDINARY_API_KEY = "953573339577527"
+CLOUDINARY_SECRET_KEY = "C_6v7TqggfXXm7XjGhqiJcGc12U"
+
+# Clerk setup
 CLERK_WEBHOOK_SECRET = "whsec_HzvkMOSvklSMC5JV8syo9O1AEpzND8nY"
+CLERK_PUBLISHABLE_KEY=pk_test_c2VsZWN0LWhhbXN0ZXItOTIuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_hnSSY40d05cANRcIVVfyZh8x1dLUKm9hI0ykyRl0sd
