--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/express": "^1.7.3",
     "@sentry/node": "^9.33.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
